--- a/javascript/building-blocks/tasks/loops/loops1-download.html
+++ b/javascript/building-blocks/tasks/loops/loops1-download.html
@@ -30,6 +30,9 @@
     const list = document.createElement('ul');
 
     // Add your code here
+    for(newArray of myArray){
+      list.textContent+=`${newArray},`
+    }
 
     // Don't edit the code below here!
 
