--- a/javascript/building-blocks/tasks/functions/functions2-download.html
+++ b/javascript/building-blocks/tasks/functions/functions2-download.html
@@ -42,6 +42,13 @@
     const color = 'blue';
 
     // Add your code here
+    function drawRect(x,y,width,height,color){
+      //set the color.
+      ctx.fillStyle=color;
+      //draw the rect.
+      ctx.fillRect(x,y,width,height);
+    }
+    drawRect();
 
     // Don't edit the code below here!
 
